# OpenRobo-Web-Framework

./: .gitignore  ADVANCED_FEATURES.md  CONTRIBUTING.md  EXTERNAL_TOOLS_INTEGRATION.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  NETWORK_PERFORMANCE.md  NETWORK_PERFORMANCE_SUMMARY.md  PAGE_OBJECT_MODEL.md  QUICKSTART.md  README.md  README_NEW.md  SETUP_COMPLETE.md  SETUP_SUMMARY.txt  log.html  output.xml  playwright-log.txt  pyproject.toml  report.html  robot.ini  run_tests.bat  run_tests.sh  setup.bat  setup.sh  test_runner.sh
.github/workflows/: greetings.yml
resources/config/: base.robot  environments.robot  locators.robot
resources/keywords/: amazon.robot  common.robot  external_tools.robot  network.robot  performance.robot  terminal_validation.robot
resources/pages/: amazon_cart_page.robot  amazon_home_page.robot  amazon_product_page.robot  base_page.robot
results/: log.html  output.xml  playwright-log.txt  report.html
tests/advanced/: advanced_features.robot
tests/external_tools/: external_tools_demo.robot
tests/network/: network_demo.robot  network_tests.robot
tests/performance/: performance_demo.robot  performance_tests.robot
tests/regression/: amazon_regression.robot  amazon_regression_pom.robot
tests/smoke/: amazon_search.robot  amazon_search_pom.robot
tests/terminal/: terminal_validation_demo.robot
