[tool.poetry]
name = "openrobo-web-framework"
version = "1.0.0"
description = "Professional Robot Framework with advanced Browser Library features"
authors = ["Tarkeshwar Kumar Mahto <tarkesh@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.0"
robotframework-browser = "^18.0"
robotframework-requests = "^0.9"
pyyaml = "^6.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
